test/hlt/test_case/Control_flow_test/result_file_mode.txt
Result for test_case/Control_flow_test/test_control_flow.py:
======[pikapython packages installed]======
pikascript-core==v1.13.3 (2024/05/25 01:26:44)
PikaStdLib===v1.13.3
===========================================
~~~/ POWERED BY \~~~
~  pikapython.com  ~
~~~~~~~~~~~~~~~~~~~~
(pikascript) pika compiler:
  compiling main.py...
  linking pikascript-api/pikaModules_cache.py.a...
(pikascript) all succeed.
======= Test Start =======
TypeError: exceptions must derive from BaseException
AssertionError: After loop, i + 1 should be equal to end
   REF i 		(#149)
   NUM 1 		(#24)
   OPT + 		(#185)
   REF end 		(#151)
   OPT == 		(#64)
   STR After loop, i + 1 should be equal to end 		(#366)
 -> ASS  		(#0)
   REF start 		(#143)
   REF end 		(#151)
 -> RUN test_for_in_range 		(#894)
 -> RUN run_control_flow_tests 		(#1024)
